--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,19 @@
         <title>{% block title %}Le centre{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="/css/style.css">
+            <link href="{{ asset('css/materialize.css') }}" rel="stylesheet"/>
         {% endblock %}
     </head>
     <body>
+        <header>
+            <a href="{{ path('home') }}">Le centre</a>
+            <a href="{{ path('planning') }}">Programme</a>
+        </header>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="{{ asset('js/materialize.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/script.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
