--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Le centre{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="/css/style.css">
             <link href="{{ asset('css/materialize.css') }}" rel="stylesheet"/>
+            <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+            <link href="{{ asset('css/normalize.css') }}" rel="stylesheet"/>
         {% endblock %}
     </head>
     <body>
