Update dashboard + add front base

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,4 +3,90 @@
 {% block title %}Le centre{% endblock %}
 
 {% block body %}
+    <div class="home-main">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-auto">
+                Une info horaire
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-auto">
+                <p>BLA</p>
+                <p>BLA</p>
+                <p>BLA</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-auto ml-auto">
+                Une info de réservation
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-auto offset-1">
+                Une info sur le centre
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="current-event">
+        <div class="container  py-5">
+            <div class="row">
+                <div class="col-auto">
+                    <div class="section-title">En ce moment</div>
+                    <div class="section-subtitle">Quelque chose se prépare</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto">
+                    BLABLA
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="coming">
+        <div class="container  py-5">
+            <div class="row">
+                <div class="col-auto">
+                    <div class="section-title">A venir</div>
+                    <div class="section-subtitle">Bientôt au coeur du centre</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    BLABLA
+                </div>
+                <div class="col text-center">
+                    BLABLA
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="instagram-gallery">
+        <div class="container  py-5">
+            <div class="row">
+                <div class="col-auto">
+                    <div class="section-title">Atelier</div>
+                    <div class="section-subtitle">Au coeur des oeuvres</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col ">
+                    <div class="d-flex flex-column">
+                        <div>PHOTO</div>
+                        <div>Tag compte le centre</div>
+                    </div>
+                </div>
+                <div class="col ">
+                    <div class="d-flex flex-column">
+                        <div>PHOTO</div>
+                        <div>PHOTO</div>
+                    </div>
+                </div>
+                <div class="col ">
+                    BLABLA
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
