--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -1,14 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Le centre - Programmation{% endblock %}
+{% block title %}Hello PlanningController!{% endblock %}
 
 {% block body %}
-<ul>
-    {% for expo in expos %}
-        <li>
-            <p>{{ expo.title }}</p>
-            <div>{{ expo.description }}</div>
-        </li>
-    {% endfor %}
-</ul>
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    This friendly message is coming from:
+    <ul>
+        <li>Your controller at <code><a href="{{ '/home/alex/Bureau/le-centre/src/Controller/PlanningController.php'|file_link(0) }}">src/Controller/PlanningController.php</a></code></li>
+        <li>Your template at <code><a href="{{ '/home/alex/Bureau/le-centre/templates/planning/index.html.twig'|file_link(0) }}">templates/planning/index.html.twig</a></code></li>
+    </ul>
+</div>
 {% endblock %}
