--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,8 +1,28 @@
 <div class="blog">
     <div class="container py-5">
         <div class="row">
+            <div class="col text-center mb-3">
+                <div class="section-title">On vous en dit plus</div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col">
-                BLABLA
+                <div class="d-flex flex-column">
+                    <div class="section-subtitle">blabla</div>
+                    <div>PHOTO</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="d-flex flex-column">
+                    <div class="section-subtitle">blabla</div>
+                    <div>PHOTO</div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="d-flex flex-column">
+                    <div class="section-subtitle">blabla</div>
+                    <div>PHOTO</div>
+                </div>
             </div>
         </div>
     </div>
@@ -10,13 +30,15 @@
 <div class="social">
     <div class="container py-5">
         <div class="row">
-            <div class="col">
+            <div class="col text-center mb-3">
+                <div class="section-title">Nous suivre</div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-auto text-center">
                 BLABLA
             </div>
-            <div class="col">
-                BLABLA
-            </div>
-            <div class="col">
+            <div class="col-auto text-center">
                 BLABLA
             </div>
         </div>
@@ -25,12 +47,12 @@
 <footer class="footer">
     <div class="container py-5">
         <div class="row">
-            <div class="col-4 offset-4 text-center">
-                Footer
+            <div class="col-4 offset-4 text-center section-title d-flex justify-content-center align-items-center">
+                <div>Footer</div>
             </div>
             <div class="col-auto">
                 <div class="d-flex flex-column">
-                    <div>Pour les artistes</div>
+                    <div class="font-weight-bold">Pour les artistes</div>
                     <div>Devenir exposant</div>
                     <div>Laboratoire de travail</div>
                 </div>
