--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,26 +4,27 @@
 
 {% block body %}
     <div class="home-main">
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-auto">
+    <div class="container-fluid py-5">
+        <div class="row my-4 py-4 ">
+            <div class="col-auto offset-1">
                 Une info horaire
             </div>
         </div>
         <div class="row">
-            <div class="col-auto">
-                <p>BLA</p>
-                <p>BLA</p>
-                <p>BLA</p>
+            <div class="col mb-5 pb-5">
             </div>
         </div>
         <div class="row">
+            <div class="col mb-5 pb-5">
+            </div>
+        </div>
+        <div class="row mt-5 py-5">
             <div class="col-auto ml-auto">
                 Une info de réservation
             </div>
         </div>
-        <div class="row">
-            <div class="col-auto offset-1">
+        <div class="row mt-2">
+            <div class="col-auto offset-2">
                 Une info sur le centre
             </div>
         </div>
@@ -37,8 +38,13 @@
                     <div class="section-subtitle">Quelque chose se prépare</div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-auto">
+            <div class="row current-event-content justify-content-between">
+                <div class="col-auto d-flex flex-column justify-content-end">
+                    <div>Titre de l'expo</div>
+                    <div>Description courte</div>
+                    <div>Thématique</div>
+                </div>
+                <div class="col-auto d-flex flex-column justify-content-start">
                     BLABLA
                 </div>
             </div>
@@ -54,10 +60,14 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    BLABLA
+                    <div class="coming-content">
+                        BLABLA
+                    </div>
                 </div>
                 <div class="col text-center">
-                    BLABLA
+                    <div class="coming-content">
+                        BLABLA
+                    </div>
                 </div>
             </div>
         </div>
