--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="header py-5">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-auto mr-auto">
                         <div><a href="{{ path('home') }}">Logo</a></div>
@@ -29,7 +29,7 @@
                                 <div><a href="{{ path('access_plan') }}">Plan d'accès</a></div>
                             </div>
                             <div class="col-auto">
-                                <div><a href="{{ path('ticket') }}">Billetterie</a></div>
+                                <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
                             </div>
                             <div class="col-auto">
                                 <div>fr/en</div>
