--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,13 @@
         {% endblock %}
     </head>
     <body>
+        <div class="container-fluid pre-header">
+            <div class="row d-flex h-100 justify-content-center align-items-center">
+                <div class="col-auto h-100 d-flex align-items-center">
+                    Ré-ouverture de la Base Sous-Marine en 2021 !
+                </div>
+            </div>
+        </div>
         <header class="header py-5">
             <div class="container-fluid">
                 <div class="row">
@@ -32,7 +39,7 @@
                                 <div><a class="header-ticket-link" href="{{ path('ticket') }}">Billetterie</a></div>
                             </div>
                             <div class="col-auto">
-                                <div>fr/en</div>
+                                <div>FR / EN</div>
                             </div>
                         </div>
                     </div>
