--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,34 +1,5 @@
-<div class="blog">
-    <div class="container py-5">
-        <div class="row">
-            <div class="col text-center mb-3">
-                <div class="section-title">On vous en dit plus</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="d-flex flex-column">
-                    <div class="section-subtitle">blabla</div>
-                    <div>PHOTO</div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex flex-column">
-                    <div class="section-subtitle">blabla</div>
-                    <div>PHOTO</div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex flex-column">
-                    <div class="section-subtitle">blabla</div>
-                    <div>PHOTO</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="social">
-    <div class="container py-5">
+<div class="social pt-2">
+    <div class="container pt-4 pb-5">
         <div class="row">
             <div class="col text-center mb-3">
                 <div class="section-title">Nous suivre</div>
@@ -36,26 +7,64 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-auto text-center">
-                BLABLA
+                <div class="social-image" style="background-image: url('https://via.placeholder.com/46x46/9D9D9D/FFFFFF')"></div>
             </div>
             <div class="col-auto text-center">
-                BLABLA
+                <div class="social-image" style="background-image: url('https://via.placeholder.com/46x46/9D9D9D/FFFFFF')"></div>
             </div>
         </div>
     </div>
 </div>
 <footer class="footer">
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-4 offset-4 text-center section-title d-flex justify-content-center align-items-center">
-                <div>Footer</div>
+    <div class="container py-4">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <div class="d-flex flex-column">
+                    <div class="footer-link font-weight-bold mb-2">VISITEURS</div>
+                    <div class="footer-sublink">Programmation</div>
+                    <div class="footer-sublink">Infos pratiques</div>
+                    <div class="footer-sublink">Plan d'accès</div>
+                    <div class="footer-sublink">Billetterie</div>
+                </div>
             </div>
             <div class="col-auto">
                 <div class="d-flex flex-column">
-                    <div class="font-weight-bold">Pour les artistes</div>
-                    <div>Devenir exposant</div>
-                    <div>Laboratoire de travail</div>
+                    <div class="footer-link font-weight-bold mb-2">ARTISTES</div>
+                    <div class="footer-sublink">Devenir exposant</div>
+                    <div class="footer-sublink">Laboratoire de travail</div>
                 </div>
+            </div>
+            <div class="col-auto">
+                <div class="d-flex flex-column">
+                    <div class="footer-link font-weight-bold mb-2">MÉDIAS</div>
+                    <div class="footer-sublink">Obtenir le kit presse</div>
+                    <div class="footer-sublink">Collaboration</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid rights">
+        <div class="row py-3 justify-content-center">
+            <div class="col-auto right">
+                Plan du site
+            </div>
+            <div class="col-auto right">
+                Crédits
+            </div>
+            <div class="col-auto right">
+                Mentions légales
+            </div>
+            <div class="col-auto right">
+                Charte pour la vie privée
+            </div>
+            <div class="col-auto right">
+                RGPD
+            </div>
+            <div class="col-auto right">
+                S'inscrire à la newsletter
+            </div>
+            <div class="col-auto right">
+                Partager
             </div>
         </div>
     </div>
