--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -3,18 +3,63 @@
 {% block title %}Hello PlanningController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/alex/Bureau/le-centre/src/Controller/PlanningController.php'|file_link(0) }}">src/Controller/PlanningController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/alex/Bureau/le-centre/templates/planning/index.html.twig'|file_link(0) }}">templates/planning/index.html.twig</a></code></li>
-    </ul>
+<div class="planning position-relative py-5">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col-auto text-center">
+                        <div class="planning-archive-info text-center d-flex flex-column">
+                            <div class="d-inline-flex justify-content-center text-center">
+                                <div class="secondary-square"></div>
+                            </div>
+                            <div class="d-inline-flex justify-content-center text-center">
+                                <div class="mt-3">Voir des infos sur <br>les archives</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col text-center">
+                <div>2021</div>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
+    <div class="pb-5">
+        <div class="container position-relative">
+            <div class="white-line">
+            </div>
+            {% for i in [1,2,3] %}
+                {{ include('planning/event.html.twig', {odd: i is odd}) }}
+            {% endfor %}
+        </div>
+    </div>
+    <div class="container mt-5 pt-4 pb-4 mb-3">
+        <div class="row">
+            <div class="col text-center">
+                <div>2020</div>
+            </div>
+        </div>
+    </div>
+    <div class="container position-relative">
+        <div class="white-line second-white-line">
+        </div>
+        <div class="row pt-5 justify-content-center">
+            <div class="col-auto text-center pt-5">
+                <div class="ternary-square"></div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <div>Voir l'historique</div>
+            </div>
+        </div>
+    </div>
+    <div class="my-5 py-5"></div>
+    <div class="my-5"></div>
+    <div class="my-5"></div>
 </div>
 {% endblock %}
